适配器正确

--- a/WeatherDemo/app/src/main/res/layout/activity_city.xml
+++ b/WeatherDemo/app/src/main/res/layout/activity_city.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/edit"
         android:background="@color/white"
+        android:visibility="gone"
         />
 
     <androidx.appcompat.widget.AppCompatButton
