--- a/WeatherDemo/app/src/main/res/layout/city_item.xml
+++ b/WeatherDemo/app/src/main/res/layout/city_item.xml
@@ -23,22 +23,26 @@
 
     <TextView
         android:id="@+id/temperature"
-        android:layout_width="64dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:text="0"
+        android:textColor="#ffffff"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/du"
-        app:layout_constraintHorizontal_bias="0.776"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toEndOf="@+id/city_name"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/du"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="32dp"
         android:text="°C"
         android:textColor="#ffffff"
-        android:textSize="40sp"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
